--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Portfolio Page</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="PortfolioPage.css" media="screen">
+    <link rel="stylesheet" href="style.css" media="screen">
     <link rel="preconnect" href="https://fonts.gstatic.com"> 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&family=Spartan:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/d8abccd190.js" crossorigin="anonymous"></script>
